--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -5,6 +5,7 @@
   font-weight: 500;
   letter-spacing: 1.2px;
   text-transform: uppercase;
+  line-height: 1;
   padding: 12px 24px;
   border-radius: $radius-sm;
   border: none;
