--- a/assets/scss/components/_cards.scss
+++ b/assets/scss/components/_cards.scss
@@ -208,6 +208,7 @@
 .commande-card__actions {
   display: flex;
   gap: 12px;
+  align-items: center;
 }
 
 @media (max-width: $bp-tablet) {
